# ReplastBot

./: .gitignore  bot.py  pyproject.toml
tgbot/: config.py
tgbot/dialogs/: __init__.py
tgbot/dialogs/dct_menu/: __init__.py  constants.py  events.py  getters.py  keyboards.py  onclick.py  states.py  whenables.py  windows.py
tgbot/dialogs/main_menu/: __init__.py  constants.py  onclick.py  states.py  windows.py
tgbot/dialogs/shift_menu/: __init__.py  constants.py  events.py  getters.py  keyboards.py  onclick.py  states.py  whenable.py  windows.py
tgbot/handlers/: admin.py  dict_setup.py  google_sheets_commands.py  new_shift_processing.py  shift_processing.py  user.py
tgbot/keyboards/: dict_setup_inline.py  shift_processing_inline.py
tgbot/middlewares/: environment.py
tgbot/misc/: datepicker_settings.py  utils.py
tgbot/models/: base.py  erp_accounting.py  erp_dict.py  erp_inventory.py  erp_shift.py  erp_shift_product_material.py  erp_shift_staff_activity.py
tgbot/services/: google_sheets.py
tgbot/widgets/aiogram_datepicker/: datepicker.py  settings.py
tgbot/widgets/aiogram_datepicker/views/: day.py
tgbot/widgets/aiogram_dialog/manager/: dialog.py
tgbot/widgets/aiogram_dialog/widgets/: widget_event.py
tgbot/widgets/aiogram_dialog/widgets/data/: data_context.py
tgbot/widgets/aiogram_dialog/widgets/input/: base.py  text.py
tgbot/widgets/aiogram_dialog/widgets/kbd/: base.py  button.py  calendar_kbd.py  checkbox.py  counter.py  group.py  list_group.py  scrolling_group.py  select.py  state.py
tgbot/widgets/num_keypad/: NumericKeypad.py
(+5 files in other folders)
