[tool.poetry]
name = "replastbot"
version = "0.1.0"
description = ""
authors = ["akm77 <aleksey.kotryakhov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.21"
SQLAlchemy = "^1.4.39"
aiosqlite = "^0.17.0"
aioredis = "^2.0.1"
environs = "^9.5.0"
SQLAlchemy-Utils = "^0.38.3"
gspread = "~5.5.0"
oauth2client = "^4.1.3"
google-api-python-client = "^2.72.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.8.0"
gspread-asyncio = "^1.7.1"
gspread-formatting = "^1.1.2"
serialchemy = "^0.3.0"
Jinja2 = "^3.1.2"
magic-filter = "^1.0.9"
MarkupSafe = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
